--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Projekti 2B</title>
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+  <link rel="stylesheet" href="styles.css">
+ 
+</head>
+<body>
+<div id="container">ToDo-lista jQueryllä
+  <div id="tasks">
+    <ul id="tasksList">
+    </ul>
+  </div>
+  
+  <div id="footer">
+      <input id="taskInput" type="text" placeholder="Lisää tehtävä"/>
+      <button id="taskAdd">+</button>
+  </div>
+</div>
+ 
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
+<script  src="jqscripts.js"></script>
+ 
+</body>
+</html>
