--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
  
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
 <script  src="jqscripts.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js">
+</script>
  
 </body>
 </html>
