--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <title>Projekti 2B</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+  
   <link rel="stylesheet" href="styles.css">
  
 </head>
 <body>
 <div id="container">ToDo-lista jQueryllä
-  <div id="tasks">
-    <ul id="tasksList">
+  <div id="tehtävät">
+    <ul id="tehtäväLista">
     </ul>
   </div>
   
   <div id="footer">
-      <input id="taskInput" type="text" placeholder="Lisää tehtävä"/>
-      <button id="taskAdd">+</button>
+      <input id="tehtäväInput" type="text" placeholder="Lisää tehtävä"/>
+      <button id="uusiTodo">+</button>
   </div>
 </div>
  
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
 <script  src="jqscripts.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js">
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </script>
  
 </body>
